--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,8 @@
 backend:
-  name: git-gateway
+  # name: git-gateway
+  # branch: master
+  name: github
+  repo: harvardadvocate/main-website
   branch: master
 
 media_folder: static/img
